fix: delete overflow from board containers, change size of task popup

--- a/src/styles/calendar-task.css
+++ b/src/styles/calendar-task.css
@@ -104,7 +104,7 @@
     width: 150px;
     top: 10px;
     left: auto;
-    right: 0;
+    right: -5px;
     padding: 5px;
   }
 
